Fix mobile header text alignment and description display
- Change mobile header title and description to left-align
- Remove automatic "..." suffix from mobile description
- Display only first line of profile bio in mobile header

--- a/css/style.css
+++ b/css/style.css
@@ -392,12 +392,14 @@ button:disabled {
 
 .mobile-header-text {
     flex: 1;
+    text-align: left;
 }
 
 .mobile-blog-title {
     font-size: 1.2rem;
     margin: 0;
     line-height: 1.2;
+    text-align: left;
 }
 
 .mobile-blog-description {
@@ -407,6 +409,7 @@ button:disabled {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-align: left;
 }
 
 /* サイドバーオーバーレイ */
